--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,6 +5,14 @@
     box-sizing: border-box;
     font-family: Suranna;
 }
+h1{
+    font-size: 5rem;
+    line-height: 100%;
+}
+p{
+    font-size: 20px; 
+    line-height: 200%;
+}
 .App{
     background-color: #000;
     color: #fff;
@@ -17,12 +25,11 @@ header{
 
 }
 .navbar{
-    width: 80%;
-    height: 60px;
+    width: 85%;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: right;
-    border: 2px solid #fff;
     margin: auto;
 
 }
@@ -36,7 +43,15 @@ header{
     color: cyan;
     text-align: center;
     text-decoration: none;
-    padding: 20px;
+    padding:10px;
+    font-size: 30px;
+    margin: 0 20px;
+    border-radius: 10px;
+    transition: 0.5s;
+ }
+ .navbar li a:hover{
+    background-color: #fff;
+    color: #1b5a82;
  }
  .main{
     display: flex;
@@ -45,38 +60,44 @@ header{
     margin: 20px auto;
  }
 .hero-image{
-    max-width: 330px;
-    border: 2px solid #fff;
     flex-basis: 50%;
+    display: block;
+    height: 100%;
+}
+.hero-image img{
+    width: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .main-title{
-    border: 2px solid #fff;
-    font-size: 30px;
-    flex-basis: 50%;
-    
+    flex-basis: 50%;  
+    margin: auto; 
+    height: 80%;
+}
+.hero-btn{
+    padding: 10px 30px;
+    border-radius:40px;
+    font-size: 20px;
+    border: none;
+    margin: 20px 0;
 }
 .aboutme{
     width: 80%;
     height: 100vh;
-    border: 2px solid #fff;
+    max-height: 100svh;
     font-size: 30px;
     display: flex;
     margin: auto;
 }
 .aboutText{
-    border: 2px solid #fff;
     text-align: justify;
     flex-basis: 50%;
     padding: 50px;
-}
-.aboutText h1{
-    font-size: 80px;
-}
-.aboutText p{
-    font-size: 20px;
+    margin: auto;
+    
 }
 .aboutImg{
-    border: 2px solid #fff;
     flex-basis: 50%;
     margin: auto;
 }
@@ -84,7 +105,7 @@ header{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
 }
 .projects{
     width: 100%;
@@ -96,11 +117,79 @@ header{
 }
 .projects p{
     max-width: 60%;
+    font-size: 5rem;
     text-align: justify;
+    line-height: 90%;
 }
 
 .calculator, .quotegenerator, .drumpads{
     width: 100%;
     height: 100svh;
     font-size: 30px;
+    border: 1px solid #fff;
+}
+.calculator{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.calcText{
+    border: 1px solid #fff;
+    padding: 20px;
+    text-align: right;
+}
+.calcImage img{
+    border: 1px solid #fff;
+    width: 80%;
+    object-fit: contain;
+}
+.quotegenerator{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.quotemark{
+    font-size: 10rem;
+    line-height: 100%;
+}
+.drumpads{
+    display: grid;
+    grid-template-columns: 50px 1fr 50px 1fr ;
+    border: 2px solid #fff;
+    grid-gap: 20px;
+}
+.drumpads h1{
+    border: 2px solid #fff;
+    grid-column: 2;
+    grid-row: 2;
+
+}
+.drumpads p{
+    grid-column: 2;
+    border: 2px solid #fff;
+    text-align: justify;
+    grid-row: 3;
+
+}
+.drumpads img{
+    grid-row: 2 / 6;
+    grid-column: 4 ;
+    width: 50%;
+    border: 2px solid #fff;
+
+}
+.drumpads button{
+    grid-column: 2;
+    grid-row: 4;
+    border: 2px solid #fff;
+
+}
+
+
+
+
+@media(max-width: 738px){
+    .calculator{
+        grid-template-columns: 1fr;
+    }
 }
