--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,7 @@
     font-family: Suranna;
 }
 
+
 h1{
     font-size: 5rem;
     line-height: 100%;
@@ -20,13 +21,16 @@ p{
     font-size: 20px; 
     line-height: 200%;
 }
+button{
+    transition: 0.2s;
+}
 .App{
     background-color: #000;
     color: #fff;
 }
 header{
     height: 100svh;
-    background-image: linear-gradient(to left,#1b5a82,#0f0d4a,#070119,#321074,#732ac9);
+    background-image: linear-gradient(to right,#1b5a82,#0f0d4a,#070119,#321074,#742ac9);
     text-align: right;
 
 }
@@ -37,7 +41,6 @@ header{
     align-items: center;
     justify-content: right;
     margin: auto;
-
 }
 .navbar ul{
     list-style: none;
@@ -50,7 +53,7 @@ header{
     text-align: center;
     text-decoration: none;
     padding:10px;
-    font-size: 25px;
+    font-size: 1.25rem;
     margin: 0 20px;
     border-radius: 10px;
     transition: 0.5s;
@@ -61,53 +64,59 @@ header{
  }
  .main{
     display: flex;
-    width: 80%;
+    max-width: 80%;
     justify-content: space-between;
     margin: 20px auto;
  }
 .hero-image{
     flex-basis: 50%;
-    height: 100%;
+    min-height: 100%;
 }
 .hero-image img{
-    width: 70%;
+    width: 80%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
 .main-title{
+    padding-top: 3em;
     flex-basis: 50%;  
     margin: auto; 
 }
+.main-title h1{
+    margin-bottom: 0.50em;
+}
+.main-title p{
+    line-height: 150%;
+}
 .hero-btn{
-    padding: 10px 30px;
-    border-radius:40px;
-    font-size: 20px;
+    padding: 0.25em 3em;
+    border-radius:1.75em;
+    font-size: 1.1em;
     border: none;
-    margin: 20px 0;
+    margin: 1em 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: transparent;
+    border: 2px solid #fff;
+    color: #fff;
+}
+.hero-btn:hover{
+    color: #0b0705;
+    background-color: #742ac9;
+    border: 2px solid #742ac9;
 }
 .aboutme{
-    width: 80%;
-    font-size: 30px;
-    display: flex;
+    max-width: 80%;
     margin: auto;
-}
-.aboutText{
     text-align: justify;
-    flex-basis: 50%;
-    padding: 50px;
-    margin: auto;
-    
 }
-.aboutImg{
-    flex-basis: 50%;
-    margin: auto;
+.aboutme h2{
+    margin-top: 3em;
 }
-.aboutmeImage{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
+.aboutme p{
+    margin-bottom: 3em;
 }
 .projects{
     font-size: 60px;
@@ -123,8 +132,10 @@ header{
     padding: 100px 0;
 }
 
-.calculator, .quotegenerator, .drumpads{
+.calculator, .quotegenerator, .drumpads, .hobbies{
     font-size: 30px;
+    max-width: 80%;
+    margin: auto;
 }
 .calculator{
     display: grid;
@@ -137,7 +148,7 @@ header{
 }
 
 .calcImage img{
-    width: 70%;
+    max-width: 70%;
 }
 .quotegenerator{
     display: flex;
@@ -145,7 +156,8 @@ header{
     align-items: center;
     flex-direction: column;
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
+    max-width: 80%;
 }
 .quotemark{
     font-size: 15vw;
@@ -153,80 +165,74 @@ header{
     position: absolute;
 }
 .leftquote{
-    top: 15%;
-    left: 25%;
+    top: 5%;
+    left: 10%;
 }
 .rightquote{
-    top: 75%;
-    right: 25%;
+    top: 90%;
+    right: 10%;
 }
 
 .quotetext{
-    border: 1px solid #fff;
-    padding: 80px;
+    padding: 8rem;
     margin-top: 10%;
+    text-align: center;
+    border-radius: 4rem 1rem;
+    background-image: linear-gradient(to right,#1b5a82,#0f0d4a,#070119,#321074,#742ac9);
+}
+.quotetext h2{
+    margin: 30px 0;
 }
 .drumpads{
-    margin-top: 100px;
+    margin: 6em auto;
     display: grid;
-    grid-template-columns: 50px 1fr 50px 1fr ;
-    grid-gap: 20px;
+    grid-template-columns:1fr 1fr ;
+    padding: 3em 0;
+    
 }
 .drumpads h2{
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 2;
-    padding-bottom: 60px;
 
 }
 .drumpads p{
-    grid-column: 2;
+    grid-column: 1;
     text-align: justify;
     grid-row: 3;
-    padding-bottom: 30px;
 
 }
 .drumpads img{
-    grid-row: 2 / 6;
-    grid-column: 4 ;
-    width: 50%;
+    grid-row: 2 / 4;
+    grid-column: 2 ;
+    min-width: 50%;
+    max-width: 50%;
+    margin: auto;
 
 }
 .drumpads button{
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 4;
+    padding: 0.25em 1em;
+    font-size: 0.75em;
 
-}
-
-
-.cards{
-    display: flex;
-    flex-wrap: wrap;
-}
-.card img{
-    padding: 20px;
-    width: 400px;
-    border-radius: 2rem;
-}
-
-.music-player{
-    padding-top: 50px;
 }
 .songs{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-bottom: 60px;
+    padding-bottom: 4em;
+    margin-top: 4rem;
 }
 .song{
     border: 1px solid #fff;
-    margin: 20px;
+    margin: 0.2em;
     border-radius: 0.50rem;
     padding: 20px;
     background-color: #0b0705;
 }
 .song img{
     border-radius: 0.25rem;
-    width: 200px;
+    max-width: 12rem;
 }
 .artist{
  font-size: 1rem;
@@ -251,19 +257,18 @@ header{
     background-color: #fff;
 }
 .gaming{
-    height: 100vh;
     position: relative;
+    height: 35em;
 }
-
 .video{
-    min-width: 100%;
+    min-width:100%;
     min-height: 100%;
     display: block;
     
 }
 .content {
     position: absolute;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.8);
     color: #f1f1f1;
     top: 50%;
     left: 50%;
@@ -278,9 +283,20 @@ header{
     line-height: 4rem;
 }
 footer{
-    width: 90%;
-    margin-top: 100px;
+    margin: 10em auto 0 ;
     text-align: right;
+    max-width: 80%;
+}
+.chatlink{
+    color: #1b5a82;
+    text-decoration: none;
+}
+.chatlink:hover{
+    background-color: #fff;
+    color: #0f0d4a;
+}
+footer ul{
+    margin-top: 3.5rem;
 }
 footer ul li{
     display: inline-block;
@@ -288,7 +304,7 @@ footer ul li{
 footer ul li a{
     color: #fff;
     font-size: 3rem;
-    padding: 0 10px;
+    padding: 0 1rem;
 }
 
 
@@ -297,7 +313,78 @@ footer ul li a{
 
 
 @media(max-width: 738px){
-    .calculator{
-        grid-template-columns: 1fr;
-    }
+.flex-container{
+    flex-direction: column;
+}
+.drumpads{
+    display: flex;
+    flex-direction: column;
+}
+
+h1{
+font-size: 3rem;
+line-height: 100%;
+}
+h2{
+font-size: 3rem;
+line-height: 100%; 
+margin: 50px 0;   
+}
+p{
+    font-size: 20px; 
+    line-height: 200%;
+}
+
+.navbar{
+    width: 100%;
+    height: 30px;
+}
+.main{
+    text-align: center;
+}
+
+.calculator{
+    grid-template-columns: 1fr;
+}
+.projects p{
+    max-width: 80%;
+    font-size: 3rem;
+    padding: 100px 0;
+}
+.quotetext{
+    padding: 2rem;
+}
+.quotetext h2{
+    margin: 30px 0;
+}
+.leftquote{
+    top: 8%;
+    left: 20%;
+}
+.rightquote{
+    top: 90%;
+    right: 20%;
+}
+.songs{
+    display: block;
+    
+    
+}
+.song img{
+    border-radius: 5rem;
+    max-width: 4rem;
+}
+.song{
+    padding: 10px;
+    border-radius: 0.35rem;
+}
+.artist{
+    font-size: 1rem;
+    padding-bottom: 10px;
+   }
+footer ul li a{
+    font-size: 2rem;
+    padding: 0 0.5rem;
+}
+
 }
